2011-08-21	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1873/cpukit
	* score/include/rtems/score/heap.h: When using heap protection, we
	should account for adding an aligned protection footer.

2011-08-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sapi/include/confdefs.h: Revert previous commit due to multi-lib
	rule violation.

2011-08-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sapi/include/confdefs.h: Include <bsp.h> for BSP_IDLE_TASK_BODY,
	BSP_IDLE_TASK_STACK_SIZE, BSP_INTERRUPT_STACK_SIZE,
	BSP_ZERO_WORKSPACE_AUTOMATICALLY, BSP_DEFAULT_UNIFIED_WORK_AREAS,
	CONFIGURE_MALLOC_BSP_SUPPORTS_SBRK, and
	CONFIGURE_BSP_PREREQUISITE_DRIVERS defines.

2011-08-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/newlibc_exit.c, score/src/threadhandler.c: Added
	init/fini array support for ARM EABI.  The __libc_init_array() and
	__libc_fini_array() functions are provided by Newlib.

2011-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1877/cpukit
	* libfs/src/imfs/imfs_mknod.c, libfs/src/imfs/memfile.c,
	sapi/inline/rtems/rbtree.inl, score/include/rtems/score/rbtree.h,
	score/inline/rtems/score/rbtree.inl, score/src/rbtree.c,
	score/src/rbtreefind.c, score/src/rbtreeinsert.c: Add comparison
	function for RBTrees.

2011-08-02	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/include/rtems/score/coremutex.h: Move check dispatch for seize
	into its own macro and add smp support.

2011-08-02	Jennifer.Averett <Jennifer.Averett@OARcorp.com>

	PR 1872
	* score/src/apimutexlock.c, score/src/apimutexunlock.c: Added smp
	support to apimutex.

2011-08-02	Petr Benes <benesp16@fel.cvut.cz>

	PR 1861/cpukit
	* score/src/rbtreeextract.c: Remove redundant code.

2011-08-01	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/include/rtems/score/isr.h: Cleaned up comments.

2011-08-01	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/include/rtems/score/smplock.h: Fix comments.
