@@ -11,7 +11,7 @@
  *         This code ignores the O_RDONLY/O_WRONLY/O_RDWR flag at open
  *         time.
  *
- *  COPYRIGHT (c) 1989-2008.
+ *  COPYRIGHT (c) 1989-2011.
  *  On-Line Applications Research Corporation (OAR).
  *
  *  The license and distribution terms for this file may be
@@ -105,8 +105,11 @@ ssize_t _POSIX_Message_queue_Receive_support(
       );
 
       _Thread_Enable_dispatch();
-      *msg_prio =
-        _POSIX_Message_queue_Priority_from_core(_Thread_Executing->Wait.count);
+      if (msg_prio) {
+        *msg_prio = _POSIX_Message_queue_Priority_from_core(
+             _Thread_Executing->Wait.count
+          );
+      }
 
       if ( !_Thread_Executing->Wait.return_code )
         return length_out;
